jena-shex/src/test/files/spec/negativeSyntax/INTEGER-123abc.shex
# bad INTEGER 123abc
# source: turtle-syntax-bad-num-03.ttl
<http://a.example/IssueShape> {
   <http://a.example/p1> [123abc]
}
